@@ -14,6 +14,9 @@ Release 2.1.1-beta - UNRELEASED
 
   BUG FIXES
 
+    YARN-1082. Create base directories on HDFS after RM login to ensure RM
+    recovery doesn't fail in secure mode. (vinodkv via acmurthy)
+
 Release 2.1.0-beta - 2013-08-22
 
   INCOMPATIBLE CHANGES
